--- a/report/APPENDIX.tex
+++ b/report/APPENDIX.tex
@@ -42,7 +42,8 @@
 \end{figure}
 %Image of circuit board(s) are sectionlocals labled as "fig:pcbr*"
 
-%INSERT Image of Battery circuit
+%\url{https://github.com/jsjolund/sailoraid/tree/master/Hardware/Gasgauge}
+
 
 %INSERT Image of casing
 
