--- a/report/main.tex
+++ b/report/main.tex
@@ -2,7 +2,7 @@
 
 % text
 \usepackage[utf8]{inputenc}
-\usepackage[numbers,super]{natbib}
+\usepackage[numbers]{natbib}
 \usepackage{lipsum}
 \usepackage[toc,page]{appendix}
 \usepackage{amssymb,amsmath}
@@ -122,7 +122,7 @@
 
 \clearpage
 \section{Casing}\label{sec:case}
-\chapterauthor{Lundberg, Josef (One, No )}
+\chapterauthor{Lundberg, Josef (Sjölund, Johannes)}
 \input{casing.tex}
 
 \clearpage
