--- a/report/references.tex
+++ b/report/references.tex
@@ -3,10 +3,8 @@
 \addcontentsline{toc}{section}{\nameref{sec:ref}}
 
 % Reference to casing cad software missing
-\bibitem{cad}
-% Reference to software used to develop battery circuit missing
-\bibitem{onlineCad}
-
+\bibitem{bqStudio}
+Battery Management Studio (bqStudio) offers a full suite of robust tools to assist with the process of evaluating, designing with, configuring, testing, or otherwise utilizing TI Battery management products. \url{http://www.ti.com/tool/bqstudio}
 \bibitem{stm32cubemx}
   \url{http://www.st.com/en/development-tools/stm32cubemx.html}
 \bibitem{kicad}
@@ -112,24 +110,24 @@ Probability and Random Processes with Applications to Signal Processing, 4/E (20
 Henry Stark, John W Woods. Pearson Higher Education. 
 
 \bibitem{Discrete_kalman}
-Estimation, Control, and the Discrete Kalman Filter, 1989. Donald E. Catlin
+	Donald E. Catlin, \emph{Estimation, Control, and the Discrete Kalman Filter}, 1989
 \bibitem{pertubation}
   \url{https://en.wikipedia.org/wiki/Perturbation_theory}
 
-\bibitem{book26}
-Weicker, P. (2014). A Systems Approach to Lithium-ion Battery Management. (pp.26-27). Boston: Artech House. 
+\bibitem{book}%[p.26-27]
+Weicker, P. (2014). \emph{A Systems Approach to Lithium-ion Battery Management}, Boston, Artech House. 
 
-\bibitem{book111}
-Weicker, P. (2014). A Systems Approach to Lithium-ion Battery Management. (pp.111). Boston: Artech House. 
+%\bibitem{book}[p.111]
+%Weicker, P. (2014). A Systems Approach to Lithium-ion Battery Management. (pp.111). Boston: Artech House. 
 
-\bibitem{book112}
-Weicker, P. (2014). A Systems Approach to Lithium-ion Battery Management. (pp.111-112). Boston: Artech House.
+%\bibitem{book}[p.111-112]
+%Weicker, P. (2014). A Systems Approach to Lithium-ion Battery Management. (pp.111-112). Boston: Artech House.
 
-\bibitem{book183}
-Weicker, P. (2014). A Systems Approach to Lithium-ion Battery Management. (pp.183-185). Boston: Artech House.
+%\bibitem{book}[p.183-185]
+%Weicker, P. (2014). A Systems Approach to Lithium-ion Battery Management. (pp.183-185). Boston: Artech House.
 
-\bibitem{book35}
-Weicker, P. (2014). A Systems Approach to Lithium-ion Battery Management. (pp.35-38). Boston: Artech House.
+%\bibitem{book}[p.35-38]
+%Weicker, P. (2014). A Systems Approach to Lithium-ion Battery Management. (pp.35-38). Boston: Artech House.
 
 \bibitem{webpage}
   \url{http://www.lygte-info.dk/info/battery%20protection%20UK.html}
