--- a/report/glossary.tex
+++ b/report/glossary.tex
@@ -11,13 +11,12 @@
 description={Application Programming Interface}, 
 first={Application Programming Interface (API)\glsadd{apig}}, see=[Glossary:]{apig}}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% PLEASE FIX THIS ELIAS
-%%% 2s
-\newglossaryentry{2sg}{name={NAME},
-    description={Acronym Explanation (NAME) description}}
-\newglossaryentry{2s}{type=\acronymtype, name={NAME}, 
-description={Acronym Explanation}, 
-first={Acronym Explanation (NAME)\glsadd{2sg}}, see=[Glossary:]{2sg}}
+%%% 2S
+\newglossaryentry{2sg}{name={2S},
+    description={A battery pack using 2 batteries in series (2S)}}
+\newglossaryentry{2s}{type=\acronymtype, name={2S}, 
+description={Two cells in Series}, 
+first={Two cells in series (2S)\glsadd{2sg}}, see=[Glossary:]{2sg}}
 
 %%% ti
 \newglossaryentry{tig}{name={TI},
@@ -141,7 +140,7 @@ first={Battery Management System (BMS)\glsadd{bmsg}}, see=[Glossary:]{bmsg}}
     description={Lithium-ion Battery (LIB) is a common type of rechargeable battery}}
 \newglossaryentry{lion}{type=\acronymtype, name={LIB}, 
 description={Battery Management System}, 
-first={Lithium-ion Battery (LIB)\glsadd{liong}}, see=[Glossary:]{liong}}
+first={Lithium-ion Batteries (LIB)\glsadd{liong}}, see=[Glossary:]{liong}}
 
 %%% PTC 
 \newglossaryentry{ptcg}{name={PTC},
@@ -363,3 +362,4 @@ first={Strapdown Inertial Navigation System (SINS)\glsadd{sinsg}}, see=[Glossary
 \newglossaryentry{dcm}{type=\acronymtype, name={DCM}, 
 description={Direction Cosine Matrix}, 
 first={Direction Cosine Matrix (DCM)\glsadd{dcmg}}, see=[Glossary:]{dcmg}}
+
