Compressing Figures (Fixing problem with Report size)

--- a/report/android.tex
+++ b/report/android.tex
@@ -97,7 +97,7 @@ It was determined that the visual feedback provided to the user was to include v
 \end{figure}
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.8\textwidth]{Figures/sog.png}
+\includegraphics[width=0.8\textwidth]{Figures/sog.jpg}
 \caption{Speed over ground view.}
 \label{feedback-sog}
 \end{figure}
@@ -109,7 +109,7 @@ It was determined that the visual feedback provided to the user was to include v
 \end{figure}
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.8\textwidth]{Figures/text.png}
+\includegraphics[width=0.8\textwidth]{Figures/text.jpg}
 \caption{Text feedback view.}
 \label{feedback-text}
 \end{figure}
