--- a/report/references.tex
+++ b/report/references.tex
@@ -3,6 +3,8 @@
 \addcontentsline{toc}{section}{\nameref{sec:ref}}
 
 % Reference to casing cad software missing
+\bibitem{cad}
+INSERT TEXT HERE
 \bibitem{bqStudio}
 Battery Management Studio (bqStudio) offers a full suite of robust tools to assist with the process of evaluating, designing with, configuring, testing, or otherwise utilizing TI Battery management products. \url{http://www.ti.com/tool/bqstudio}
 \bibitem{stm32cubemx}
