--- a/report/sensors.tex
+++ b/report/sensors.tex
@@ -31,7 +31,7 @@ A model of the pressure sensor was created in order to clearly show the function
 
 \begin{figure}[H]
 \begin{center}
-	\includegraphics[width = 10cm]{Figures/Press_sens_prot_1.png}
+	\includegraphics[width = 45\textwidth]{Figures/Press_sens_prot_1.jpg}
 	\caption{First prototype of a force sensor.}
 	\label{Press_sens_prot_1}
 \end{center}
