--- a/report/titlepage.tex
+++ b/report/titlepage.tex
@@ -33,7 +33,7 @@
 	\begin{flushleft}
 		\large
 		\emph{Authors}\\
-		Axelsson Oskar, \\ 
+		Axelsson, Oskar, \\ 
 		Brolin, Daniel, \\ 
 		Eriksson, Kenny \\ 
 		Grape, Elias \\ 
@@ -47,7 +47,7 @@
 	\begin{flushright}
 		\large
 		\textit{Managing Editor}\\
-		Kenny or daniel
+		Brolin, Daniel
 	\end{flushright}
 	\begin{flushright}
 		\large
