Fixed BMS appendix, arranged figures in android.tex

--- a/report/APPENDIX.tex
+++ b/report/APPENDIX.tex
@@ -1,25 +1,52 @@
 \section{Large Figures}\label{sec:app}
 
-\subsection{Schematic}
+\subsection{Schematic of sensorboard}
 %Image of schematic(s) (Rev 3)
 \begin{figure}[h]
 	\centering
     \includegraphics[width=.9\linewidth]{Figures/schem_r3_a.png}
-	\caption{Schematic of revision 3, part a: Required circuitry}
+	\caption{Schematic of revision 3, part a: Required circuitry.}
 	\label{fig:schr3a}
 \end{figure}
 \begin{figure}[h]
 	\centering
     \includegraphics[width=\linewidth]{Figures/schem_r3_b.png}
-	\caption{Schematic of revision 3, part b: Modules}
+	\caption{Schematic of revision 3, part b: Modules.}
 	\label{fig:schr3b}
 \end{figure}
 \begin{figure}[h]
 	\centering
     \includegraphics[width=\linewidth]{Figures/schem_r3_c.png}
-	\caption{Schematic of revision 3, part c: Meta circuitry}
+	\caption{Schematic of revision 3, part c: Meta circuitry.}
 	\label{fig:schr3c}
 \end{figure}
+
+\subsection{Schematic of \gls{bms}}\label{app:bms}
+\begin{figure}[h]
+	\centering
+    \includegraphics[width=\linewidth]{Figures/gasgauge_sch_root.png}
+	\caption{Root schematic of \gls{bms} circuitry.}
+	\label{fig:schbmsr}
+\end{figure}
+\begin{figure}[h]
+	\centering
+    \includegraphics[width=\linewidth]{Figures/gasgauge_sch_bq28z610.png}
+	\caption{Schematic of \gls{bms}, part a: bq28z610.}
+	\label{fig:schbmsr}
+\end{figure}
+\begin{figure}[h]
+	\centering
+    \includegraphics[width=\linewidth]{Figures/gasgauge_sch_bq24133.png}
+	\caption{Schematic of \gls{bms}, part b: bq24133.}
+	\label{fig:schbmsr}
+\end{figure}
+\begin{figure}[h]
+	\centering
+    \includegraphics[width=\linewidth]{Figures/gasgauge_sch_lm2529.png}
+	\caption{Schematic of \gls{bms}, part c: lm2596.}
+	\label{fig:schbmsr}
+\end{figure}
+
 
 \clearpage
 \subsection{CubeMX software}\label{sec:app:mxc}
@@ -42,8 +69,6 @@
 \end{figure}
 %Image of circuit board(s) are sectionlocals labled as "fig:pcbr*"
 
-%\url{https://github.com/jsjolund/sailoraid/tree/master/Hardware/Gasgauge}
-
-%INSERT Image of casing
+%Local. Image of casing
 
 %INSERT Image of complete/mounted system
