--- a/report/bms.tex
+++ b/report/bms.tex
@@ -167,8 +167,7 @@ A connection diagram for this configuration can be seen in \autoref{fig:diagram}
 	\label{fig:diagram}
 \end{figure} 
 
-\autoref{fig:bmspwb} shows the \gls{pwb} that when soldered and tested would fulfill all requirements. It is supposed to be the entire \gls{bms}. 
-Schematics, board layout, and Gerber-files can all be found in the appendix. %Nope. Not there. Also, refer to them!: Can be found in the appendix, see: \autoref{first}, \ref{second}, ..., and \ref{last}.
+\autoref{fig:bmspwb} shows the \gls{pwb} that when soldered and tested would fulfill all requirements. It is supposed to be the entire \gls{bms}. For detailed view of the schematic see section \ref{app:bms}.
 
 \begin{figure}[H]
 	\centering
