--- a/report/main.tex
+++ b/report/main.tex
@@ -14,8 +14,7 @@
 \usepackage{scrextend}
 \usepackage{graphicx, xcolor}
 \usepackage{rotating}
-\usepackage{subfig}
-\usepackage{float}
+\usepackage{subcaption, wrapfig, float}
 
 % links
 \usepackage{color}
