--- a/report/android.tex
+++ b/report/android.tex
@@ -50,68 +50,71 @@ It was determined that the visual feedback provided to the user was to include v
 \item [\ref{feedback-pressure} \textbf{Pressure}] moves a pin along a colored bar to represent high of low pressure applied on the centerboard.
 \item [\ref{feedback-compass} \textbf{Bearing}] rotates a compass to show the ship relative bearing against true north.
 \item [\ref{feedback-map} \textbf{Map}] displays current location of the ship.
-\item [\ref{feedback-drift} \textbf{Drift}] is represented with a colored bar containing two arrows that moves to the relative drift direction to show the sailor if the ship was holding its set navigational reference.
 \item [\ref{feedback-height} \textbf{Speed}] displays a speedometer from a classical Swedish vehicle\cite{volvo} with a movable bar representing speed over ground.
+\item [\ref{feedback-drift} \textbf{Drift}] is represented with a colored bar containing two arrows that moves to the relative drift direction to show the sailor if the ship was holding its set navigational reference.
+\item [\ref{feedback-text} \textbf{Feedback}] a text that changes values based on the current state of the boat.
 \item [\ref{feedback-sog} \textbf{Height}] of the centerboard is represented with a visual centerboard moving up and down along a graphical ruler.
 \item [\ref{feedback-wave} \textbf{Wave frequency}] displays a wave moving towards a ship at a speed representing different period of the waves.
-\item [\ref{feedback-text} \textbf{Feedback}] a text that changes values based on the current state of the boat.
 \end{labeling}
 
-%Are all these pictures better fit within a sub chapter in the appendix? Since it is a few pages of only figures it kind of breaks the ``flow'' of the report.
-%They could be referred to as ``\autoref{first} to \ref{last}'', individually ``\autoref{first}, \ref{second}, ... and \ref{last}'' or simply as ``\autoref{appendix_subchapter}''.
 \begin{figure}[H] 
-\centering
-\includegraphics[width=0.6\textwidth]{Figures/incline.png}
-\caption{Incline feedback view}
-\label{feedback-incline}
+ 	\centering
+	\begin{minipage}[c]{0.6\textwidth}
+	\includegraphics[width=\textwidth]{Figures/incline.png}
+	\caption{Incline feedback view}
+	\label{feedback-incline}
+	\end{minipage}
+	~
+	\begin{minipage}[c]{.3\textwidth}
+	\includegraphics[width=\textwidth]{Figures/pressure.png}
+	\caption{Pressure feedback view.}
+	\label{feedback-pressure}
+	\end{minipage}
+\end{figure}
+%
+\begin{figure}[H]
+	\centering
+	\begin{minipage}[c]{0.55\textwidth}
+	\includegraphics[width=\textwidth]{Figures/compass.png}
+	\caption{Bearing feedback view.}
+	\label{feedback-compass}
+	\end{minipage}
+	~
+	\begin{minipage}[c]{0.35\textwidth}
+	\includegraphics[width=\textwidth]{Figures/map.png}
+	\caption{Map feedback view.}
+	\label{feedback-map}
+	\end{minipage}
 \end{figure}
 \begin{figure}[H]
-\centering
-\includegraphics[width=0.3\textwidth]{Figures/pressure.png}
-\caption{Pressure feedback view.}
-\label{feedback-pressure}
+	\centering
+	\begin{minipage}[c]{0.3\textwidth}
+	\includegraphics[width=\textwidth]{Figures/height.png}
+	\caption{Centerboard height view.}
+	\label{feedback-height}
+	\end{minipage}
+	~
+	\begin{minipage}[c]{0.6\textwidth}
+	\includegraphics[width=\textwidth]{Figures/drift.png}
+	\caption{Drift feedback view.}
+	\label{feedback-drift}
+	
+	\includegraphics[width=\textwidth]{Figures/text.png}
+	\caption{Text feedback view.}
+	\label{feedback-text}
+	\end{minipage}
 \end{figure}
 \begin{figure}[H]
-\centering
-\includegraphics[width=0.6\textwidth]{Figures/compass.png}
-\caption{Bearing feedback view.}
-\label{feedback-compass}
+	\centering
+	\includegraphics[width=0.8\textwidth]{Figures/sog.jpg}
+	\caption{Speed over ground view.}
+	\label{feedback-sog}
 \end{figure}
 \begin{figure}[H]
-\centering
-\includegraphics[width=0.4\textwidth]{Figures/map.png}
-\caption{Map feedback view.}
-\label{feedback-map}
-\end{figure}
-\begin{figure}[H]
-\centering
-\includegraphics[width=0.6\textwidth]{Figures/drift.png}
-\caption{Drift feedback view.}
-\label{feedback-drift}
-\end{figure}
-\begin{figure}[H]
-\centering
-\includegraphics[width=0.4\textwidth]{Figures/height.png}
-\caption{Centerboard height view.}
-\label{feedback-height}
-\end{figure}
-\begin{figure}[H]
-\centering
-\includegraphics[width=0.8\textwidth]{Figures/sog.jpg}
-\caption{Speed over ground view.}
-\label{feedback-sog}
-\end{figure}
-\begin{figure}[H]
-\centering
-\includegraphics[width=0.8\textwidth]{Figures/wave.png}
-\caption{Wave period feedback view.}
-\label{feedback-wave}
-\end{figure}
-\begin{figure}[H]
-\centering
-\includegraphics[width=0.8\textwidth]{Figures/text.jpg}
-\caption{Text feedback view.}
-\label{feedback-text}
+	\centering
+	\includegraphics[width=0.8\textwidth]{Figures/wave.jpg}
+	\caption{Wave period feedback view.}
+	\label{feedback-wave}
 \end{figure}
 The figures were chosen at a development stage and improvements can easily be made by adding different \gls{png}\cite{png} files in android studio. They are implemented as GLSurfaceView\cite{gl} so that updating the figures is be done by calling a requestRender function, this improves the performance of the application when only updates to the figures are done when new sensor readings are received. To make the figure fit the application the GLSurfaceView is extended into a RotatableGLView that has the wanted features for rotation and positioning. Using these figures four different layouts are developed to give multiple choices for the user and is seen in figure \ref{feedback-layouts}. Switching between these layouts a swipeTouchListener is implemented which allows the user to swipe across the screen to change the layout. Changing view the figures needs to be redrawn onto a new view matching the current layout, this is handled in the ViewDisplayer class that contained all RotatableGLViews.
 
