--- a/report/titlepage.tex
+++ b/report/titlepage.tex
@@ -7,7 +7,7 @@
 
 \textsc{\LARGE Luleå University of Technology}\\[1.5cm] % Main heading such as the name of your university/college
 
-\textsc{\Large Dept. of Computer Science, Electrical and Space Engineering}\\[0.5cm] % Major heading such as course name
+\textsc{\Large Dept.\ of Computer Science, Electrical and Space Engineering}\\[0.5cm] % Major heading such as course name
 
 \begin{centering}
 \begin{tabular}{l l}
