Small edits here and there

--- a/report/glossary.tex
+++ b/report/glossary.tex
@@ -18,6 +18,13 @@ first={Application Programming Interface (API)\glsadd{apig}}, see=[Glossary:]{ap
 description={Two cells in Series}, 
 first={Two cells in series (2S)\glsadd{2sg}}, see=[Glossary:]{2sg}}
 
+%%% skipper
+\newglossaryentry{skipperg}{name={skipper},
+    description={A skipper is a person who has command of a boat or seacraft or tug.}}
+\newglossaryentry{skipper}{type=\acronymtype, name={skipper}, 
+description={Two cells in Series}, 
+first={boat commander (skipper)\glsadd{skipperg}}, see=[Glossary:]{skipperg}}
+
 %%% ti
 \newglossaryentry{tig}{name={TI},
     description={Texas Instruments Inc. (TI) is an American technology company
