--- a/report/main.tex
+++ b/report/main.tex
@@ -105,13 +105,13 @@
 \input{physics.tex}
 
 \clearpage
-\section{Mechanical sensors}
+\section{Mechanical Sensors}
 \chapterauthor{Lundberg, Josef (Grape, Elias)}
 \input{sensors.tex}
 
 \clearpage
-\section{Main sensorboard design}\label{sec:hw}
-\chapterauthor{Brolin, Daniel (Eriksson, Kenny)}
+\section{Main Sensorboard Design}\label{sec:hw}
+\chapterauthor*{Brolin, Daniel (Eriksson, Kenny)}
 \input{hw_design.tex}
 
 \clearpage
@@ -126,7 +126,7 @@
 
 \clearpage
 \section{Software Design}\label{sec:sw}
-\chapterauthor{Sjölund, Johannes (Brolin, daniel)}
+\chapterauthor*{Sjölund, Johannes (Brolin, Daniel)}
 \input{software_design.tex}
 \input{android.tex}
 \input{software_results.tex}
