--- a/report/software_design.tex
+++ b/report/software_design.tex
@@ -1,7 +1,7 @@
 The software has been divided into two parts, the firmware for the \gls{arm} \gls{mcu} with associated sensors, and an Android application which can display sensor data. These two parts utilize a Bluetooth connection to communicate their current states; for example, when the \gls{imu} calculates a new orientation, this data should be processed by the firmware and the resulting calculations sent to the Android application over Bluetooth to be displayed to the user.
 
 \subsection{ARM firmware}
-
+\chapterauthor{Sjölund, Johannes (Brolin, Daniel)}
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.6\textwidth]{Figures/stm32nucleo.jpg}
