--- a/report/APPENDIX.tex
+++ b/report/APPENDIX.tex
@@ -4,7 +4,7 @@
 %Image of schematic(s) (Rev 3)
 \begin{figure}[h]
 	\centering
-    \includegraphics[width=.9\linewidth]{Figures/schem_r3_a.png}
+    \includegraphics[width=.93\linewidth]{Figures/schem_r3_a.png}
 	\caption{Schematic of revision 3, part a: Required circuitry.}
 	\label{fig:schr3a}
 \end{figure}
@@ -21,16 +21,17 @@
 	\label{fig:schr3c}
 \end{figure}
 
+\clearpage
 \subsection{Schematic of \gls{bms}}\label{app:bms}
 \begin{figure}[h]
 	\centering
-    \includegraphics[width=\linewidth]{Figures/gasgauge_sch_root.png}
+    \includegraphics[width=.9\linewidth]{Figures/gasgauge_sch_root.png}
 	\caption{Root schematic of \gls{bms} circuitry.}
 	\label{fig:schbmsr}
 \end{figure}
 \begin{figure}[h]
 	\centering
-    \includegraphics[width=\linewidth]{Figures/gasgauge_sch_bq28z610.png}
+    \includegraphics[width=.9\linewidth]{Figures/gasgauge_sch_bq28z610.png}
 	\caption{Schematic of \gls{bms}, part a: bq28z610.}
 	\label{fig:schbmsr}
 \end{figure}
