--- a/report/main.tex
+++ b/report/main.tex
@@ -36,7 +36,7 @@
 \makeglossaries
 \glsenablehyper
 
-\newcommand{\project}{\emph {SailorAid}}
+\newcommand{\project}{\emph{SailorAid}}
 
 \newcommand\chapterauthor[1]{\authortoc{#1}\printchapterauthor{#1}}
 \WithSuffix\newcommand\chapterauthor*[1]{\printchapterauthor{#1}}
@@ -84,7 +84,7 @@
 
 \clearpage
 \setlength{\columnseprule}{0.2pt}
-\tableofcontents
+\tableofcontents % TABLE OF CONTENTS
 \vspace{0.5em}
 
 \clearpage
