Introduction edit, last push

--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -15,7 +15,7 @@ The primary functional goals are the following:
 \begin{itemize}[noitemsep] % For consistency the item layout is reverted to standard.
 	\item Boat attitude
 	\begin{itemize}[noitemsep]
-		\item Implementing an appropriate \gls{imu}:
+		\item Implementing appropriate \gls{imu}s:
 		\begin{itemize}[noitemsep]
 			\item Accelerometer
 			\item Gyroscope
