--- a/report/main.tex
+++ b/report/main.tex
@@ -14,7 +14,9 @@
 \usepackage{scrextend}
 \usepackage{graphicx, xcolor}
 \usepackage{rotating}
-\usepackage{subcaption, wrapfig, float}
+\usepackage{subcaption, float}
+%\usepackage[sc]{titlesec}
+%\usepackage{titletoc}
 
 % links
 \usepackage{color}
@@ -24,7 +26,7 @@
 \usepackage[hypcap]{caption}
 
 % layout
-\usepackage{multicol}
+%\usepackage{multicol}
 \usepackage{fancyhdr,lastpage}
 \setcounter{tocdepth}{2}
 
